# fabric-drawio

./: .env.example  .gitignore  CLAUDE.md  README.md  fabric-medallion-architecture.drawio  pyproject.toml  requirements.txt  run.bat  run.sh
agent/: demo.py  llm.py  main.py  tools.py
devops/: client.py
drawio/: builder.py
examples/: devops_epics.json  purview_assets.json  purview_collections.json
fabric/: client.py
purview/: client.py
skills/devops-epic-mapping/: SKILL.md
skills/drawio-constraints/: SKILL.md
skills/fabric-resource-governance/: SKILL.md
skills/kiss-yagni/: SKILL.md
skills/medallion-architecture/: SKILL.md
skills/purview-asset-governance/: SKILL.md
skills/workspace-scoping/: SKILL.md
techspec/: builder.py
tests/: conftest.py  test_demo.py  test_devops_client.py  test_drawio_builder.py  test_llm.py  test_main.py  test_purview_client.py  test_techspec.py  test_tools.py
web/: app.py
web/templates/: index.html
